add: text and img

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 </head>
 <body>
 
-  <div id="app"></div>
+  <div id="app">
+    <h1>{{ greetingText }}</h1>
+    <img :src="img" alt="">
+  </div>
 
   <!-- my-script -->
   <script src="js/script.js"></script>
